// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`@fluojs/websockets public surface > keeps runtime subpaths focused on explicit module and lifecycle exports > runtime-subpaths 1`] = `
{
  "bun": [
    "BunWebSocketGatewayLifecycleService",
    "BunWebSocketModule",
    "OnConnect",
    "OnDisconnect",
    "OnMessage",
    "WebSocketGateway",
    "defineWebSocketGatewayMetadata",
    "defineWebSocketHandlerMetadata",
    "getWebSocketGatewayMetadata",
    "getWebSocketHandlerMetadata",
    "getWebSocketHandlerMetadataEntries",
    "webSocketGatewayMetadataSymbol",
    "webSocketHandlerMetadataSymbol",
  ],
  "cloudflare-workers": [
    "CloudflareWorkersWebSocketGatewayLifecycleService",
    "CloudflareWorkersWebSocketModule",
    "OnConnect",
    "OnDisconnect",
    "OnMessage",
    "WebSocketGateway",
    "defineWebSocketGatewayMetadata",
    "defineWebSocketHandlerMetadata",
    "getWebSocketGatewayMetadata",
    "getWebSocketHandlerMetadata",
    "getWebSocketHandlerMetadataEntries",
    "webSocketGatewayMetadataSymbol",
    "webSocketHandlerMetadataSymbol",
  ],
  "deno": [
    "DenoWebSocketGatewayLifecycleService",
    "DenoWebSocketModule",
    "OnConnect",
    "OnDisconnect",
    "OnMessage",
    "WebSocketGateway",
    "defineWebSocketGatewayMetadata",
    "defineWebSocketHandlerMetadata",
    "getWebSocketGatewayMetadata",
    "getWebSocketHandlerMetadata",
    "getWebSocketHandlerMetadataEntries",
    "webSocketGatewayMetadataSymbol",
    "webSocketHandlerMetadataSymbol",
  ],
  "node": [
    "NodeWebSocketGatewayLifecycleService",
    "NodeWebSocketModule",
    "OnConnect",
    "OnDisconnect",
    "OnMessage",
    "WebSocketGateway",
    "defineWebSocketGatewayMetadata",
    "defineWebSocketHandlerMetadata",
    "getWebSocketGatewayMetadata",
    "getWebSocketHandlerMetadata",
    "getWebSocketHandlerMetadataEntries",
    "webSocketGatewayMetadataSymbol",
    "webSocketHandlerMetadataSymbol",
  ],
}
`;

exports[`@fluojs/websockets public surface > keeps the documented root barrel focused on module-first registration > root 1`] = `
[
  "OnConnect",
  "OnDisconnect",
  "OnMessage",
  "WebSocketGateway",
  "WebSocketGatewayLifecycleService",
  "WebSocketModule",
  "defineWebSocketGatewayMetadata",
  "defineWebSocketHandlerMetadata",
  "getWebSocketGatewayMetadata",
  "getWebSocketHandlerMetadata",
  "getWebSocketHandlerMetadataEntries",
  "webSocketGatewayMetadataSymbol",
  "webSocketHandlerMetadataSymbol",
]
`;
